<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stromzähler</string>
    <string name="home_zaehlerstand_anfang">Ich möchte einen</string>
    <string name="home_zaehlerstand">neuen Zählerstand</string>
    <string name="home_zaehlerstand_ende">dokumentieren.</string>
    <string name="menu_settings">Settings</string>
    <string name="home_status_anfang">Mein Status</string>
    <string name="home_status">vom $date</string>
    <string name="home_status_ende">.</string>
    <string name="home_moechte">Ich möchte </string>
    <string name="menu_zaehler">Meine Zählerstände</string>
    <string name="menu_vertrag">Mein Vertrag</string>
    <string name="menu_abrechnung">Jahresabrechnung</string>
    <string name="menu_about">Über</string>
    <string name="menu_dev_dummy">Dummy-Values in Datenbank einfügen</string>
    <string name="menu_dev_clear_db">Datenbank leeren</string>
    <string name="home_font">Hier wird eine benutzerdefinierte Font genutzt.</string>
    <string name="title_activity_status">Status</string>
    <string name="status_rueckzahlung_start">Du wirst vermutlich\n$betrag € zurückgezahlt bekommen.</string>
    <string name="status_nachzahlung_start">Du musst wahrscheinlich\n$betrag € nachzahlen.</string>
    <string name="status_detail_anfang">Mein Stromverbrauch</string>
    <string name="status_detail">im Detail</string>
    <string name="status_detail_ende">.</string>
    <string name="status_dialog">Du hast noch nicht genügend Zählerstände dokumentiert.\nMöchtest du jetzt einen Zählerstand dokumentieren?</string>
    <string name="testausgabe">DB Testausgabe</string>
    <string name="home_moechte_zaehlerstand">einen neuen Zählerstand dokumentieren.</string>
    <string name="home_moechte_status">meinen Status vom $date sehen.</string>
    <string name="yes_no_dialog_yes">Ja</string>
    <string name="yes_no_dialog_no">Nein</string>
    <string name="ok_dialog_ok">OK</string>
    <string name="zaehlerstand_choose_kamera">Kamera</string>
    <string name="zaehlerstand_choose_text">Text</string>
    <string name="title_activity_zaehlerstand_manuell">Zählerstand</string>
    <string name="manuell_zaehler_anfang">Mein Zählerstand beträgt heute</string>
    <string name="manuell_zaehler_ende">Kilowattstunden.</string>
    <string name="generic_weiter">Weiter</string>
    <string name="generic_komma">,</string>
    <string name="generic_euro">€.</string>
    <string name="generic_cent">ct.</string>
    <string name="dialog_stromvertrag">Bitte halte Deinen Stromvertrag bereit.</string>
    <string name="dialog_stromzaehler">Bitte gehe jetzt zu Deinem Stromzähler.</string>
    <string name="title_activity_vertrag">Vertrag</string>
    <string name="vertrag_beginn">Mein Abrechnungs-\nzeitraum beginnt am</string>
    <string name="gebuehren_beginn">Meine Grundgebühr ist</string>
    <string name="gebuehren_kilowatt">Pro kWh zahle ich</string>
    <string name="abschlag_beginn">Mein monatlicher Abschlag beträgt</string>
    <string name="zaehlerstand_beginn_beginn">Mein Zählerstand \nbei der letzten\nAbrechnung betrug</string>
    <string name="zaehlerstand_beginn_ende">Kilowattstunden.</string>
    <string name="title_activity_zaehlerstand_kamera">Zählerstand</string>
    <string name="kamera_zaehler_anfang">Ist dieser Zählerstand richtig?</string>
    <string name="generic_ja">Ja.</string>
    <string name="kamera_nein_mache">Nein, ich mache ein</string>
    <string name="kamera_nein_foto">neues Foto.</string>
    <string name="kamera_nein_eingeben">Nein, ich gebe den</string>
    <string name="kamera_nein_zaehlerstand">Zählerstand ein.</string>
    <string name="kamera_beispiel_zaehler">78410</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_zaehlerstand">Zählerstände</string>
    <string name="title_activity_kamera">Kamera</string>
    <string name="editdialog_zaehlerstand">Zählerstand</string>
    <string name="cancel">Abbrechen</string>
    <string name="OK">OK</string>
    <string name="update_zaehler_ende">Kilowattstunden</string>
    <string name="status_rueckzahlung_meldung">Glückwunsch!</string>
    <string name="status_nachzahlung_meldung">Schade!</string>
    <string name="title_activity_ueber">Über</string>
    <string name="action_settings">Settings</string>
    <string name="wattnglueck">Watt\'n\'Glück</string>
    <string name="ueber_uns">Der Stromzähler ist ein Projekt von Watt\'n\'Glück.\n\nDas sind <a href="mailto:jan-christopher.pien@fu-berlin.de">Jan-Christopher Pien</a>,\n<a href="mailto:eric.zetzsche@googlemail.com">Eric Zetsche</a> und <a href="http://www.joannadauner.de">Joanna Dauner</a>.\n\nwir sind Studenten der\nFreien Universität Berlin und der\nUniversität der Künste.</string>
    <string name="zaehlerstand_datum">Datum</string>
    <string name="zaehlerstand_zaehlerstand">Zählerstand</string>

</resources>