<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/zaehlerstand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editdialog_zaehlerstand" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickCancel"
            android:text="@string/cancel" >
        </Button>

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickOK"
            android:text="@string/OK" >
        </Button>
    </LinearLayout>

</LinearLayout>