<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    tools:context=".HomeScreen" >

    <TextView
        android:id="@+id/textZaehler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/home_zaehlerstand"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textZaehler"
        android:layout_marginTop="32dp"
        android:text="@string/home_status"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/testausgabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/testausgabe"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>