<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context=".ZaehlerstandManuell" >

    <TextView
        android:id="@+id/textManuellZaehlerAnfang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/update_zaehler_anfang"
        android:textSize="26sp" />

    <NumberPicker
        android:id="@+id/manuellNumberPicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textManuellZaehlerAnfang"
        android:layout_below="@+id/textManuellZaehlerAnfang"
        android:layout_marginTop="14dp" />

    <NumberPicker
        android:id="@+id/manuellNumberPicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/manuellNumberPicker1"
        android:layout_toRightOf="@+id/manuellNumberPicker1" />

    <NumberPicker
        android:id="@+id/manuellNumberPicker3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/manuellNumberPicker2"
        android:layout_toRightOf="@+id/manuellNumberPicker2" />

    <NumberPicker
        android:id="@+id/manuellNumberPicker4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/manuellNumberPicker3"
        android:layout_toRightOf="@+id/manuellNumberPicker3" />

    <NumberPicker
        android:id="@+id/manuellNumberPicker5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/manuellNumberPicker4"
        android:layout_toRightOf="@+id/manuellNumberPicker4" />

    <TextView
        android:id="@+id/textManuellZaehlerEnde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/manuellNumberPicker1"
        android:layout_below="@+id/manuellNumberPicker1"
        android:layout_marginRight="50dp"
        android:layout_marginTop="14dp"
        android:text="@string/manuell_zaehler_ende"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textManuellCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textManuellZaehlerEnde"
        android:layout_below="@+id/textManuellZaehlerEnde"
        android:layout_marginRight="15dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textManuellOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textManuellZaehlerEnde"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/textManuellCancel"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:text="@string/OK"
        android:textColor="#ffffff"
        android:textSize="26sp" />

</RelativeLayout>